@@ -272,6 +272,15 @@ class WC_Subscriptions_Core_Payment_Gateways {
 	}
 
 	/**
+	 * Determines if subscriptions with a total of nothing (0) are allowed.
+	 *
+	 * @return bool
+	 */
+	public static function are_zero_total_subscriptions_allowed() {
+		return get_called_class() !== 'WC_Subscriptions_Core_Payment_Gateways';
+	}
+
+	/**
 	 * Returns whether the gateway supports subscriptions and automatic renewals.
 	 *
 	 * @since 1.3.0
